Fixed overflow in popup for Firefox browser

--- a/browser-action/popup.css
+++ b/browser-action/popup.css
@@ -8,6 +8,7 @@ body {
 	width: 400px;
 	margin: 0;
 	padding: 0;
+	overflow: hidden;
 }
 
 #tabs {
