--- a/content-script/styles.css
+++ b/content-script/styles.css
@@ -174,7 +174,7 @@
 	border: 1px solid #888; 
 	border-radius: 50px;
 	padding: 30px;
-	font-size: 5em;
+	font-size: 200%;
 	color: white;
 	transition: top 0.4s ease;
 }
